# strata-k

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: book.yml  ci.yml  gpu.yml
book/: .gitignore  book.toml
book/en/: 00-prologue.md  01-the-idea.md  02-two-winters-three-bets.md  03-dissolved-not-dead.md  04-autopsies.md  05-converging-lines.md  06-meet-strata-k.md  07-change-one-word.md  08-choices-under-constraints.md  09-the-language-that-checks-itself.md  10-iron.md  11-the-road.md  12-first-contact.md  SUMMARY.md
crates/strata-asp/: Cargo.toml
crates/strata-asp/src/: aspif.rs  clasp.rs  heuristic.rs  lib.rs  normalize.rs  simplify.rs  unfounded.rs
crates/strata-asp/tests/: ablation.rs  clingo_diff.rs
crates/strata-check/: Cargo.toml
crates/strata-check/src/: diagnostics.rs  lib.rs
crates/strata-check/tests/: check.rs
crates/strata-cli/: Cargo.toml
crates/strata-cli/src/: asp.rs  input.rs  main.rs  prob.rs  prov.rs  render.rs
crates/strata-cli/tests/: book_listings.rs  souffle_diff.rs  workloads.rs
crates/strata-eval/: Cargo.toml
crates/strata-eval/src/: dred.rs  incprov.rs  lib.rs  naive.rs  prob.rs  provenance.rs  seminaive.rs  store.rs  value.rs
crates/strata-eval/tests/: fuzz.rs  interp.rs
crates/strata-front/: Cargo.toml
crates/strata-front/src/: diagnostics.rs  fmt.rs  lexer.rs  lib.rs  parser.rs  printer.rs
crates/strata-front/tests/: parse.rs  roundtrip.rs
crates/strata-gpu/: Cargo.toml  README.md
crates/strata-gpu/examples/: bench.rs  race.rs  tri.rs
crates/strata-gpu/src/: asp.rs  contraction.rs  lib.rs  partition.rs  plan.rs  sort.rs  tc.rs  trop.rs  wcoj.rs
crates/strata-gpu/tests/: asp_diff.rs  intern_diff.rs  tc_diff.rs  trop_diff.rs  wcoj_diff.rs
crates/strata-ir/: Cargo.toml
crates/strata-ir/examples/: gen_schema.rs
crates/strata-ir/src/: diag.rs  dict.rs  lib.rs  output.rs  terms.rs  trop.rs  value.rs  version.rs
crates/strata-ir/src/core/: mod.rs
crates/strata-ir/src/high/: mod.rs  program.rs  sig.rs  trivia.rs
crates/strata-ir/src/schema/: mod.rs
crates/strata-ir/tests/: roundtrip.rs
crates/strata-k/: Cargo.toml  README.md
crates/strata-k/examples/: neural_inprocess.rs
crates/strata-k/src/: input.rs  lib.rs
crates/strata-k/tests/: facade.rs
crates/strata-prob/: Cargo.toml  README.md
crates/strata-prob/examples/: mnist_sum.rs
crates/strata-prob/src/: circuit.rs  compile.rs  lib.rs  mnist_sum.rs  provenance.rs  topk.rs
crates/strata-py/: Cargo.toml  README.md  pyproject.toml
crates/strata-py/src/: lib.rs
crates/strata-py/tests/: test_bridge.py  test_sdd_oracle.py  test_train_gnn.py
crates/strata-terms/: Cargo.toml  README.md
crates/strata-terms/examples/: pointsto.rs
crates/strata-terms/src/: intern.rs  lib.rs  magic.rs  pointsto.rs  subsume.rs
docs/: grammar.ebnf  ir-encoding.md  language.md
examples/: asp.strata  edges.tsv  grad.strata  prob.strata  prov.strata  tc.strata  tc_tsv.strata  terms.strata
examples/book/: README.md  ch01-ownership.strata  ch06-trading-house.strata  ch07-routes.strata  ch07-shared-evidence.strata  ch08-portfolio.strata  ch09-vignette-draft.strata  ch09-vignette-draft2.strata  ch09-vignette.strata  ch11-neural.strata  ch11-prov.strata
examples/book/ch04/: README.md  ground200.lp  path_bad.pl  path_good.pl  queens.pl
examples/python/: README.md  train_gnn.py
examples/workloads/: README.md
examples/workloads/aml/: aml.strata  companies.tsv  flags.tsv  gen.py  ownership.tsv  sanctions.tsv
examples/workloads/routing/: gen.py  links.tsv  routing.strata
schema/: high-ir.schema.json
