[package]
name = "strata-asp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Reference ASP solver: grounding reuses the same Herbrand universe as the engine;
# depends only on strata-ir for the High-IR rule shapes and ground values (D14).
[dependencies]
strata-ir.workspace = true

[lints]
workspace = true
