[package]
name = "strata-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# strata-ir is the base crate (D14): serde stack + schemars only, no sibling deps.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[lints]
workspace = true
